--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,10 +139,259 @@
     "        ## estimated time spent outside the store/not on order preparation\n",
     "        historical_data['est_time_non-prep'] = historical_data['estimated_order_place_duration'] + historical_data['estimated_store_to_consumer_driving_duration']\n",
     "        ## estimated time spent in the store/not driving\n",
-    "        historical_data['est_time_prep'] = historical_data['actual_total_delivery_duration'] - historical_data['est_time_non-prep']\n",
+    "        # historical_data['est_time_prep'] = historical_data['actual_total_delivery_duration'] - historical_data['est_time_non-prep'] ##TODO #5 drop when issue #4 is complete\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
     "    return historical_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 388,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## TODO #4 create estimated prep time features that are anchored to stores and/or categories\n",
+    "# the est_time_prep feature depends on the actual delivery datetime, which can't be provided to a model\n",
+    "# BUT a set of values derived from historical data can be given to a model on demand\n",
+    "\n",
+    "def addFeatures_store_prep_stats(historical_data:pd.DataFrame) -> pd.DataFrame:\n",
+    "## returns a separate dataframe with the min, max, median and mean and standard deviation of the est_prep_time_per_item for each store_id\n",
+    "    try:\n",
+    "        historical_data['est_time_prep_per_item'] = (historical_data['actual_total_delivery_duration'] - historical_data['est_time_non-prep']) / historical_data['total_items']\n",
+    "        store_prep_stats_df = historical_data[['store_id','est_time_prep_per_item']].groupby('store_id').est_time_prep_per_item.aggregate(['min','max','median',np.mean,np.std])\n",
+    "        store_prep_stats_df = store_prep_stats_df.add_prefix('store_est_time_prep_per_item_')\n",
+    "    except Exception as ex:\n",
+    "        raise ex\n",
+    "    return store_prep_stats_df\n",
+    "\n",
+    "def addFeatures_category_prep_stats(historical_data:pd.DataFrame) -> pd.DataFrame:\n",
+    "## returns a separate dataframe with the min,max, median, mean and standard deviation for each category\n",
+    "    try:\n",
+    "        historical_data['est_time_prep_per_item'] = (historical_data['actual_total_delivery_duration'] - historical_data['est_time_non-prep']) / historical_data['total_items']\n",
+    "        category_prep_stats_df = historical_data[['clean_store_primary_category','est_time_prep_per_item']].groupby('clean_store_primary_category').est_time_prep_per_item.aggregate(['min','max','median',np.mean,np.std])\n",
+    "        category_prep_stats_df = category_prep_stats_df.add_prefix('category_est_time_prep_per_item_')\n",
+    "    except Exception as ex:\n",
+    "        raise ex\n",
+    "    return category_prep_stats_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 389,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>category_est_time_prep_per_item_min</th>\n",
+       "      <th>category_est_time_prep_per_item_max</th>\n",
+       "      <th>category_est_time_prep_per_item_median</th>\n",
+       "      <th>category_est_time_prep_per_item_mean</th>\n",
+       "      <th>category_est_time_prep_per_item_std</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>clean_store_primary_category</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>afghan</th>\n",
+       "      <td>214.000</td>\n",
+       "      <td>5355.333333</td>\n",
+       "      <td>788.333333</td>\n",
+       "      <td>1057.246370</td>\n",
+       "      <td>807.132654</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>african</th>\n",
+       "      <td>435.500</td>\n",
+       "      <td>2448.000000</td>\n",
+       "      <td>885.000000</td>\n",
+       "      <td>1136.650000</td>\n",
+       "      <td>731.554207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>alcohol</th>\n",
+       "      <td>-15.500</td>\n",
+       "      <td>12928.666667</td>\n",
+       "      <td>685.000000</td>\n",
+       "      <td>912.226438</td>\n",
+       "      <td>799.076513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>alcohol-plus-food</th>\n",
+       "      <td>2004.000</td>\n",
+       "      <td>2004.000000</td>\n",
+       "      <td>2004.000000</td>\n",
+       "      <td>2004.000000</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>american</th>\n",
+       "      <td>-627.000</td>\n",
+       "      <td>27228.000000</td>\n",
+       "      <td>743.732143</td>\n",
+       "      <td>990.084841</td>\n",
+       "      <td>835.578714</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>thai</th>\n",
+       "      <td>-184.000</td>\n",
+       "      <td>15713.333333</td>\n",
+       "      <td>580.166667</td>\n",
+       "      <td>775.240204</td>\n",
+       "      <td>707.253931</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>turkish</th>\n",
+       "      <td>127.625</td>\n",
+       "      <td>4159.000000</td>\n",
+       "      <td>616.500000</td>\n",
+       "      <td>814.368465</td>\n",
+       "      <td>656.011393</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vegan</th>\n",
+       "      <td>-25.000</td>\n",
+       "      <td>4475.000000</td>\n",
+       "      <td>741.000000</td>\n",
+       "      <td>935.949365</td>\n",
+       "      <td>697.613987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vegetarian</th>\n",
+       "      <td>-24.000</td>\n",
+       "      <td>5725.000000</td>\n",
+       "      <td>672.500000</td>\n",
+       "      <td>870.727979</td>\n",
+       "      <td>678.970404</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vietnamese</th>\n",
+       "      <td>-433.000</td>\n",
+       "      <td>9099.000000</td>\n",
+       "      <td>689.000000</td>\n",
+       "      <td>902.570123</td>\n",
+       "      <td>723.871222</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>74 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              category_est_time_prep_per_item_min  \\\n",
+       "clean_store_primary_category                                        \n",
+       "afghan                                                    214.000   \n",
+       "african                                                   435.500   \n",
+       "alcohol                                                   -15.500   \n",
+       "alcohol-plus-food                                        2004.000   \n",
+       "american                                                 -627.000   \n",
+       "...                                                           ...   \n",
+       "thai                                                     -184.000   \n",
+       "turkish                                                   127.625   \n",
+       "vegan                                                     -25.000   \n",
+       "vegetarian                                                -24.000   \n",
+       "vietnamese                                               -433.000   \n",
+       "\n",
+       "                              category_est_time_prep_per_item_max  \\\n",
+       "clean_store_primary_category                                        \n",
+       "afghan                                                5355.333333   \n",
+       "african                                               2448.000000   \n",
+       "alcohol                                              12928.666667   \n",
+       "alcohol-plus-food                                     2004.000000   \n",
+       "american                                             27228.000000   \n",
+       "...                                                           ...   \n",
+       "thai                                                 15713.333333   \n",
+       "turkish                                               4159.000000   \n",
+       "vegan                                                 4475.000000   \n",
+       "vegetarian                                            5725.000000   \n",
+       "vietnamese                                            9099.000000   \n",
+       "\n",
+       "                              category_est_time_prep_per_item_median  \\\n",
+       "clean_store_primary_category                                           \n",
+       "afghan                                                    788.333333   \n",
+       "african                                                   885.000000   \n",
+       "alcohol                                                   685.000000   \n",
+       "alcohol-plus-food                                        2004.000000   \n",
+       "american                                                  743.732143   \n",
+       "...                                                              ...   \n",
+       "thai                                                      580.166667   \n",
+       "turkish                                                   616.500000   \n",
+       "vegan                                                     741.000000   \n",
+       "vegetarian                                                672.500000   \n",
+       "vietnamese                                                689.000000   \n",
+       "\n",
+       "                              category_est_time_prep_per_item_mean  \\\n",
+       "clean_store_primary_category                                         \n",
+       "afghan                                                 1057.246370   \n",
+       "african                                                1136.650000   \n",
+       "alcohol                                                 912.226438   \n",
+       "alcohol-plus-food                                      2004.000000   \n",
+       "american                                                990.084841   \n",
+       "...                                                            ...   \n",
+       "thai                                                    775.240204   \n",
+       "turkish                                                 814.368465   \n",
+       "vegan                                                   935.949365   \n",
+       "vegetarian                                              870.727979   \n",
+       "vietnamese                                              902.570123   \n",
+       "\n",
+       "                              category_est_time_prep_per_item_std  \n",
+       "clean_store_primary_category                                       \n",
+       "afghan                                                 807.132654  \n",
+       "african                                                731.554207  \n",
+       "alcohol                                                799.076513  \n",
+       "alcohol-plus-food                                             NaN  \n",
+       "american                                               835.578714  \n",
+       "...                                                           ...  \n",
+       "thai                                                   707.253931  \n",
+       "turkish                                                656.011393  \n",
+       "vegan                                                  697.613987  \n",
+       "vegetarian                                             678.970404  \n",
+       "vietnamese                                             723.871222  \n",
+       "\n",
+       "[74 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 389,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "addFeatures_category_prep_stats(historical_data=historical_data)"
    ]
   },
   {
@@ -151,14 +400,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TODO #4 create estimated prep time features that are anchored to stores and/or categories\n",
-    "# the est_time_prep feature depends on the actual delivery datetime, which can't be provided to a supervised model\n",
-    "# BUT a set of values derived from historical data can be given to a model on demand"
+    "## a continuation of addFeatures_store_prep_stats that adjusts the average for stores with more than five orders by removing outlier prep times\n",
+    "\n",
+    "prep_time_df = historical_data\n",
+    "prep_time_df['est_time_prep_per_item'] = (prep_time_df['actual_total_delivery_duration'] - prep_time_df['est_time_non-prep']) / prep_time_df['total_items']\n",
+    "## prep time features for stores with low (>6) value counts\n",
+    "lowStore_prep_stats = prep_time_df[['store_id','est_time_prep_per_item']].groupby(\"store_id\").filter(lambda x: len(x) <= 5)\n",
+    "lowStore_prep_stats = lowStore_prep_stats.groupby('store_id').est_time_prep_per_item.aggregate(['min','max','median',np.mean,np.std])\n",
+    "## prep time features for stores with high (>6) value counts\n",
+    "highStore_prep_stats = prep_time_df[['store_id','est_time_prep_per_item']].groupby(\"store_id\").filter(lambda x: len(x) > 5)\n",
+    "highStore_prep_stats = highStore_prep_stats.groupby('store_id').est_time_prep_per_item.aggregate(['min','max','median',np.mean,np.std])\n",
+    "highStore_adj_avg = pd.merge(\n",
+    "    left=prep_time_df[['store_id','total_items','est_time_prep_per_item']],\n",
+    "    right=highStore_prep_stats[['mean','std']].reset_index(),\n",
+    "    how='inner',\n",
+    "    on='store_id')\n",
+    "highStore_adj_avg['z_score'] = (highStore_adj_avg['est_time_prep_per_item'] - highStore_adj_avg['mean']) / highStore_adj_avg['std']\n",
+    "highStore_adj_avg[(highStore_adj_avg['z_score'] < 3) | (highStore_adj_avg['z_score'] > -3)]\n",
+    "highStore_prep_stats.add_prefix()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +435,7 @@
     "        historical_data['busy_to_outstanding'].replace(to_replace=[np.inf,-np.inf,np.nan],value=0,inplace=True)\n",
     "        historical_data['onshift_to_outstanding'] = historical_data['total_onshift_dashers'] / historical_data['total_outstanding_orders']\n",
     "        historical_data['onshift_to_outstanding'].replace([np.inf,-np.inf],0,inplace=True)\n",
-    "        historical_data['est_prep_per_item'] = historical_data['est_time_prep'] / historical_data['total_items']\n",
+    "        # historical_data['est_prep_per_item'] = historical_data['est_time_prep'] / historical_data['total_items'] #TODO #5 drop when issue #4 is complete\n",
     "        # replace infinite values with NaN to be dropped in the final cleaning step\n",
     "        #historical_data['busy_to_onshift'].replace([np.inf,-np.inf],np.nan,inplace=True)\n",
     "        #historical_data['busy_to_outstanding'].replace([np.inf,-np.inf],np.nan,inplace=True)\n",
@@ -183,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 335,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [],
    "source": [
