first try at feature selection complete

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -988,7 +988,7 @@
    ],
    "source": [
     "## how many features are needed to explain 90% of the variance?\n",
-    "print(\"We need \" + str(len(PCAcalc_expl_var(x_train=vif_x_train,target_expl_variance=0.9)[0])) + \" features (out of \" + str(vif_x_train.shape[1]) + \" available) to explain 90 pecent the variance after VIF dimensionality reduction\")\n",
+    "print(\"We need \" + str(len(PCAcalc_expl_var(x_train=vif_x_train,target_expl_variance=0.9)[0])) + \" features (out of \" + str(vif_x_train.shape[1]) + \" available) to explain 90 percent of the variance after VIF dimensionality reduction\")\n",
     "\n",
     "vif_x_train_scaled = apply_standard_scaler(vif_x_train)\n",
     "pca = PCA().fit(vif_x_train_scaled)\n",
