removed outliers from category stats calcs

--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,6 +159,7 @@
     "        historical_data = addFeatures_durations(historical_data=historical_data)\n",
     "        ## calculate the amount of time (in seconds) the order spends in the store, then divide by the total number of items in the order\n",
     "        historical_data['est_time_prep_per_item'] = (historical_data['actual_total_delivery_duration'] - historical_data['est_time_non-prep']) / historical_data['total_items']\n",
+    "        historical_data = historical_data[historical_data['est_time_prep_per_item'] > 0]\n",
     "        store_prep_stats_df = historical_data[['store_id','est_time_prep_per_item']].groupby('store_id').est_time_prep_per_item.aggregate(['min','max','median',np.mean,np.std])\n",
     "        store_prep_stats_df = store_prep_stats_df.add_prefix('store_est_time_prep_per_item_')\n",
     "    except Exception as ex:\n",
@@ -171,11 +172,268 @@
     "        historical_data = addFeatures_durations(historical_data=historical_data)\n",
     "        ## calculate the amount of time (in seconds) the order spends in the store, then divide by the total number of items in the order\n",
     "        historical_data['est_time_prep_per_item'] = (historical_data['actual_total_delivery_duration'] - historical_data['est_time_non-prep']) / historical_data['total_items']\n",
-    "        category_prep_stats_df = historical_data[['clean_store_primary_category','est_time_prep_per_item']].groupby('clean_store_primary_category').est_time_prep_per_item.aggregate(['min','max','median',np.mean,np.std])\n",
+    "        historical_data = historical_data[historical_data['est_time_prep_per_item'] > 0]\n",
+    "        category_prep_stats_df = historical_data[['clean_store_primary_category','est_time_prep_per_item']].groupby('clean_store_primary_category').est_time_prep_per_item.aggregate([np.mean,np.std])\n",
+    "        ## calculate z-score\n",
+    "        category_prep_facts_df = pd.merge(\n",
+    "            left=category_prep_stats_df.reset_index(),\n",
+    "            right=historical_data[['created_at','clean_store_primary_category','est_time_prep_per_item']],\n",
+    "            how='inner',\n",
+    "            on='clean_store_primary_category'\n",
+    "        )\n",
+    "        category_prep_facts_df['z_score'] = (category_prep_facts_df['est_time_prep_per_item'] - category_prep_facts_df['mean']) / category_prep_facts_df['std']\n",
+    "        category_prep_stats_df = category_prep_facts_df.loc[(category_prep_facts_df['z_score'] <= 3) & (category_prep_facts_df['z_score'] >= -3)]\n",
+    "        category_prep_stats_df = category_prep_stats_df.drop(columns=['mean','std','created_at'])\n",
+    "        category_prep_stats_df = category_prep_stats_df.groupby('clean_store_primary_category').est_time_prep_per_item.aggregate(['min','max','median',np.mean,np.std])\n",
     "        category_prep_stats_df = category_prep_stats_df.add_prefix('category_est_time_prep_per_item_')\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
     "    return category_prep_stats_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>category_est_time_prep_per_item_min</th>\n",
+       "      <th>category_est_time_prep_per_item_max</th>\n",
+       "      <th>category_est_time_prep_per_item_median</th>\n",
+       "      <th>category_est_time_prep_per_item_mean</th>\n",
+       "      <th>category_est_time_prep_per_item_mean</th>\n",
+       "      <th>category_est_time_prep_per_item_std</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>clean_store_primary_category</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>afghan</th>\n",
+       "      <td>214.000000</td>\n",
+       "      <td>3397.0</td>\n",
+       "      <td>783.866667</td>\n",
+       "      <td>1019.543853</td>\n",
+       "      <td>1019.543853</td>\n",
+       "      <td>701.649104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>african</th>\n",
+       "      <td>435.500000</td>\n",
+       "      <td>2448.0</td>\n",
+       "      <td>885.000000</td>\n",
+       "      <td>1136.650000</td>\n",
+       "      <td>1136.650000</td>\n",
+       "      <td>731.554207</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>alcohol</th>\n",
+       "      <td>22.000000</td>\n",
+       "      <td>3261.0</td>\n",
+       "      <td>676.125000</td>\n",
+       "      <td>858.591710</td>\n",
+       "      <td>858.591710</td>\n",
+       "      <td>620.202072</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>american</th>\n",
+       "      <td>24.000000</td>\n",
+       "      <td>3496.0</td>\n",
+       "      <td>734.500000</td>\n",
+       "      <td>934.627693</td>\n",
+       "      <td>934.627693</td>\n",
+       "      <td>658.134124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>argentine</th>\n",
+       "      <td>110.400000</td>\n",
+       "      <td>2717.0</td>\n",
+       "      <td>645.500000</td>\n",
+       "      <td>779.030651</td>\n",
+       "      <td>779.030651</td>\n",
+       "      <td>584.806055</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>thai</th>\n",
+       "      <td>22.333333</td>\n",
+       "      <td>2889.0</td>\n",
+       "      <td>570.200000</td>\n",
+       "      <td>712.435640</td>\n",
+       "      <td>712.435640</td>\n",
+       "      <td>493.038005</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>turkish</th>\n",
+       "      <td>127.625000</td>\n",
+       "      <td>2737.0</td>\n",
+       "      <td>597.000000</td>\n",
+       "      <td>745.804958</td>\n",
+       "      <td>745.804958</td>\n",
+       "      <td>505.617937</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vegan</th>\n",
+       "      <td>92.833333</td>\n",
+       "      <td>2956.0</td>\n",
+       "      <td>728.500000</td>\n",
+       "      <td>884.850254</td>\n",
+       "      <td>884.850254</td>\n",
+       "      <td>592.160695</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vegetarian</th>\n",
+       "      <td>49.900000</td>\n",
+       "      <td>2853.0</td>\n",
+       "      <td>664.500000</td>\n",
+       "      <td>814.654910</td>\n",
+       "      <td>814.654910</td>\n",
+       "      <td>535.631082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vietnamese</th>\n",
+       "      <td>17.666667</td>\n",
+       "      <td>3071.5</td>\n",
+       "      <td>677.000000</td>\n",
+       "      <td>847.181275</td>\n",
+       "      <td>847.181275</td>\n",
+       "      <td>587.465248</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>72 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              category_est_time_prep_per_item_min  \\\n",
+       "clean_store_primary_category                                        \n",
+       "afghan                                                 214.000000   \n",
+       "african                                                435.500000   \n",
+       "alcohol                                                 22.000000   \n",
+       "american                                                24.000000   \n",
+       "argentine                                              110.400000   \n",
+       "...                                                           ...   \n",
+       "thai                                                    22.333333   \n",
+       "turkish                                                127.625000   \n",
+       "vegan                                                   92.833333   \n",
+       "vegetarian                                              49.900000   \n",
+       "vietnamese                                              17.666667   \n",
+       "\n",
+       "                              category_est_time_prep_per_item_max  \\\n",
+       "clean_store_primary_category                                        \n",
+       "afghan                                                     3397.0   \n",
+       "african                                                    2448.0   \n",
+       "alcohol                                                    3261.0   \n",
+       "american                                                   3496.0   \n",
+       "argentine                                                  2717.0   \n",
+       "...                                                           ...   \n",
+       "thai                                                       2889.0   \n",
+       "turkish                                                    2737.0   \n",
+       "vegan                                                      2956.0   \n",
+       "vegetarian                                                 2853.0   \n",
+       "vietnamese                                                 3071.5   \n",
+       "\n",
+       "                              category_est_time_prep_per_item_median  \\\n",
+       "clean_store_primary_category                                           \n",
+       "afghan                                                    783.866667   \n",
+       "african                                                   885.000000   \n",
+       "alcohol                                                   676.125000   \n",
+       "american                                                  734.500000   \n",
+       "argentine                                                 645.500000   \n",
+       "...                                                              ...   \n",
+       "thai                                                      570.200000   \n",
+       "turkish                                                   597.000000   \n",
+       "vegan                                                     728.500000   \n",
+       "vegetarian                                                664.500000   \n",
+       "vietnamese                                                677.000000   \n",
+       "\n",
+       "                              category_est_time_prep_per_item_mean  \\\n",
+       "clean_store_primary_category                                         \n",
+       "afghan                                                 1019.543853   \n",
+       "african                                                1136.650000   \n",
+       "alcohol                                                 858.591710   \n",
+       "american                                                934.627693   \n",
+       "argentine                                               779.030651   \n",
+       "...                                                            ...   \n",
+       "thai                                                    712.435640   \n",
+       "turkish                                                 745.804958   \n",
+       "vegan                                                   884.850254   \n",
+       "vegetarian                                              814.654910   \n",
+       "vietnamese                                              847.181275   \n",
+       "\n",
+       "                              category_est_time_prep_per_item_mean  \\\n",
+       "clean_store_primary_category                                         \n",
+       "afghan                                                 1019.543853   \n",
+       "african                                                1136.650000   \n",
+       "alcohol                                                 858.591710   \n",
+       "american                                                934.627693   \n",
+       "argentine                                               779.030651   \n",
+       "...                                                            ...   \n",
+       "thai                                                    712.435640   \n",
+       "turkish                                                 745.804958   \n",
+       "vegan                                                   884.850254   \n",
+       "vegetarian                                              814.654910   \n",
+       "vietnamese                                              847.181275   \n",
+       "\n",
+       "                              category_est_time_prep_per_item_std  \n",
+       "clean_store_primary_category                                       \n",
+       "afghan                                                 701.649104  \n",
+       "african                                                731.554207  \n",
+       "alcohol                                                620.202072  \n",
+       "american                                               658.134124  \n",
+       "argentine                                              584.806055  \n",
+       "...                                                           ...  \n",
+       "thai                                                   493.038005  \n",
+       "turkish                                                505.617937  \n",
+       "vegan                                                  592.160695  \n",
+       "vegetarian                                             535.631082  \n",
+       "vietnamese                                             587.465248  \n",
+       "\n",
+       "[72 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "addFeatures_category_prep_stats(historical_data=historical_data)"
    ]
   },
   {
