--- a/doordash_delivery_est/doordash_est.ipynb
+++ b/doordash_delivery_est/doordash_est.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "The dataset comes with two other predicted values: `estimated_order_place_duration` and `estimated_store_to_consumer_driving_duration`. The missing piece is the amount of time the order spends in the store. In addition to generic feature engineering, I will be creating separate order 'prep_time' statistics tables/dataframes to simulate gold fact tables in a database or features from a feature store (i.e. Feather, Feast) that would in turn live in a data lake.\n",
     "\n",
-    "This is a fairly popular exercise so it is possible to derive performance objectives. My goal is to produce a feature set and model that has a test RMSE of less than 1200 seconds (20 minutes)"
+    "This is a fairly popular exercise so it is possible to derive performance objectives. My goal is to produce a feature set and model that has a test RMSE of less than 1200 seconds (20 minutes), with a stretch goal of 600 seconds. For reference, the best models publically available produce a test RMSE around 980 - 1000 seconds."
    ]
   },
   {
@@ -213,13 +213,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 160,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## add time of day features\n",
+    "\n",
+    "def addFeatures_time_of_day(historical_data:pd.DataFrame) -> pd.DataFrame:\n",
+    "    try:\n",
+    "        historical_data['created_hour_of_day'] = historical_data['created_at'].dt.hour\n",
+    "        historical_data['created_day_of_week'] = historical_data['created_at'].dt.day_of_week\n",
+    "    except Exception as ex:\n",
+    "        raise ex\n",
+    "    return historical_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
     "## add ratio features\n",
     "def addFeatures_ratios(historical_data:pd.DataFrame) -> pd.DataFrame:\n",
     "    try:\n",
+    "        historical_data['available_dashers'] = historical_data['total_onshift_dashers'] - historical_data['total_busy_dashers']\n",
     "        historical_data['busy_to_onshift'] = historical_data['total_onshift_dashers'] / historical_data['total_busy_dashers']\n",
     "        historical_data['busy_to_onshift'].replace(to_replace=[np.inf,-np.inf],value=historical_data['total_onshift_dashers'][1],inplace=True)\n",
     "        historical_data['busy_to_outstanding'] = historical_data['total_busy_dashers'] / historical_data['total_outstanding_orders']\n",
@@ -251,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -290,6 +308,7 @@
        "      <th>busy_to_onshift</th>\n",
        "      <th>busy_to_outstanding</th>\n",
        "      <th>onshift_to_outstanding</th>\n",
+       "      <th>available_dashers</th>\n",
        "      <th>store_est_time_prep_per_item_min</th>\n",
        "      <th>store_est_time_prep_per_item_max</th>\n",
        "      <th>store_est_time_prep_per_item_median</th>\n",
@@ -314,34 +333,7 @@
        "      <th>clean_store_primary_category__breakfast</th>\n",
        "      <th>clean_store_primary_category__british</th>\n",
        "      <th>clean_store_primary_category__bubble-tea</th>\n",
-       "      <th>clean_store_primary_category__burger</th>\n",
        "      <th>...</th>\n",
-       "      <th>clean_store_primary_category__mexican</th>\n",
-       "      <th>clean_store_primary_category__middle-eastern</th>\n",
-       "      <th>clean_store_primary_category__moroccan</th>\n",
-       "      <th>clean_store_primary_category__nepalese</th>\n",
-       "      <th>clean_store_primary_category__other</th>\n",
-       "      <th>clean_store_primary_category__pakistani</th>\n",
-       "      <th>clean_store_primary_category__pasta</th>\n",
-       "      <th>clean_store_primary_category__persian</th>\n",
-       "      <th>clean_store_primary_category__peruvian</th>\n",
-       "      <th>clean_store_primary_category__pizza</th>\n",
-       "      <th>clean_store_primary_category__russian</th>\n",
-       "      <th>clean_store_primary_category__salad</th>\n",
-       "      <th>clean_store_primary_category__sandwich</th>\n",
-       "      <th>clean_store_primary_category__seafood</th>\n",
-       "      <th>clean_store_primary_category__singaporean</th>\n",
-       "      <th>clean_store_primary_category__smoothie</th>\n",
-       "      <th>clean_store_primary_category__soup</th>\n",
-       "      <th>clean_store_primary_category__southern</th>\n",
-       "      <th>clean_store_primary_category__spanish</th>\n",
-       "      <th>clean_store_primary_category__steak</th>\n",
-       "      <th>clean_store_primary_category__sushi</th>\n",
-       "      <th>clean_store_primary_category__tapas</th>\n",
-       "      <th>clean_store_primary_category__thai</th>\n",
-       "      <th>clean_store_primary_category__turkish</th>\n",
-       "      <th>clean_store_primary_category__vegan</th>\n",
-       "      <th>clean_store_primary_category__vegetarian</th>\n",
        "      <th>clean_store_primary_category__vietnamese</th>\n",
        "      <th>market_id__1.0</th>\n",
        "      <th>market_id__2.0</th>\n",
@@ -356,6 +348,32 @@
        "      <th>order_protocol__5.0</th>\n",
        "      <th>order_protocol__6.0</th>\n",
        "      <th>order_protocol__7.0</th>\n",
+       "      <th>created_hour_of_day__0</th>\n",
+       "      <th>created_hour_of_day__1</th>\n",
+       "      <th>created_hour_of_day__2</th>\n",
+       "      <th>created_hour_of_day__3</th>\n",
+       "      <th>created_hour_of_day__4</th>\n",
+       "      <th>created_hour_of_day__5</th>\n",
+       "      <th>created_hour_of_day__6</th>\n",
+       "      <th>created_hour_of_day__7</th>\n",
+       "      <th>created_hour_of_day__8</th>\n",
+       "      <th>created_hour_of_day__14</th>\n",
+       "      <th>created_hour_of_day__15</th>\n",
+       "      <th>created_hour_of_day__16</th>\n",
+       "      <th>created_hour_of_day__17</th>\n",
+       "      <th>created_hour_of_day__18</th>\n",
+       "      <th>created_hour_of_day__19</th>\n",
+       "      <th>created_hour_of_day__20</th>\n",
+       "      <th>created_hour_of_day__21</th>\n",
+       "      <th>created_hour_of_day__22</th>\n",
+       "      <th>created_hour_of_day__23</th>\n",
+       "      <th>created_day_of_week__0</th>\n",
+       "      <th>created_day_of_week__1</th>\n",
+       "      <th>created_day_of_week__2</th>\n",
+       "      <th>created_day_of_week__3</th>\n",
+       "      <th>created_day_of_week__4</th>\n",
+       "      <th>created_day_of_week__5</th>\n",
+       "      <th>created_day_of_week__6</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -376,6 +394,7 @@
        "      <td>0.5</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>0.500000</td>\n",
+       "      <td>-1.0</td>\n",
        "      <td>212.75</td>\n",
        "      <td>3489.5</td>\n",
        "      <td>471.75</td>\n",
@@ -400,15 +419,16 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -431,8 +451,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -460,6 +478,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>212.75</td>\n",
        "      <td>3489.5</td>\n",
        "      <td>471.75</td>\n",
@@ -484,16 +503,15 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -519,10 +537,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -544,6 +562,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.500000</td>\n",
        "      <td>0.500000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>212.75</td>\n",
        "      <td>3489.5</td>\n",
        "      <td>471.75</td>\n",
@@ -568,15 +587,15 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -604,7 +623,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -628,6 +646,7 @@
        "      <td>1.0</td>\n",
        "      <td>0.666667</td>\n",
        "      <td>0.666667</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>212.75</td>\n",
        "      <td>3489.5</td>\n",
        "      <td>471.75</td>\n",
@@ -652,15 +671,24 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -684,16 +712,6 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -712,6 +730,7 @@
        "      <td>1.0</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>212.75</td>\n",
        "      <td>3489.5</td>\n",
        "      <td>471.75</td>\n",
@@ -736,16 +755,15 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -771,9 +789,9 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -781,21 +799,21 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 112 columns</p>\n",
+       "<p>5 rows × 139 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   total_items  subtotal  ...  order_protocol__6.0  order_protocol__7.0\n",
-       "0          1.0    1900.0  ...                  0.0                  0.0\n",
-       "1          1.0    1900.0  ...                  0.0                  0.0\n",
-       "2          6.0    6900.0  ...                  0.0                  0.0\n",
-       "3          3.0    3900.0  ...                  0.0                  0.0\n",
-       "4          3.0    5000.0  ...                  0.0                  0.0\n",
+       "   total_items  subtotal  ...  created_day_of_week__5  created_day_of_week__6\n",
+       "0          1.0    1900.0  ...                     0.0                     0.0\n",
+       "1          1.0    1900.0  ...                     0.0                     0.0\n",
+       "2          6.0    6900.0  ...                     0.0                     0.0\n",
+       "3          3.0    3900.0  ...                     0.0                     1.0\n",
+       "4          3.0    5000.0  ...                     0.0                     0.0\n",
        "\n",
-       "[5 rows x 112 columns]"
+       "[5 rows x 139 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 161,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,8 +845,10 @@
     "train_df = addFeatures_dummies(historical_data=train_df,dummy_column='clean_store_primary_category')\n",
     "train_df = addFeatures_dummies(historical_data=train_df,dummy_column='market_id')\n",
     "train_df = addFeatures_dummies(historical_data=train_df,dummy_column='order_protocol')\n",
+    "train_df = addFeatures_dummies(historical_data=train_df,dummy_column='created_hour_of_day')\n",
+    "train_df = addFeatures_dummies(historical_data=train_df,dummy_column='created_day_of_week')\n",
     "# drop the native 'store_primary_category' column and all remaining non-feature columns, then do a headcheck\n",
-    "train_df.drop(columns=['store_primary_category','created_at','actual_delivery_time','store_id','est_time_prep_per_item'],inplace=True)\n",
+    "train_df.drop(columns=['store_primary_category','created_at','actual_delivery_time','store_id','est_time_prep_per_item','hour_of_day'],inplace=True)\n",
     "## drop NaN's\n",
     "train_df.dropna(inplace=True)\n",
     "train_df = train_df.astype(\"float32\")\n",
@@ -869,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +918,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -949,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,20 +992,20 @@
     "    scaler = StandardScaler()\n",
     "    try:\n",
     "        if type(dataset) == pd.DataFrame:\n",
-    "            scaler.fit(dataset.values)\n",
+    "            scaler = scaler.fit(dataset.values)\n",
     "            dataset_scaled = scaler.transform(dataset.values)\n",
     "            dataset_scaled = pd.DataFrame(dataset_scaled,index=dataset.index,columns=dataset.columns)\n",
     "        else:\n",
-    "            scaler.fit(dataset)\n",
+    "            scaler = scaler.fit(dataset)\n",
     "            dataset_scaled = scaler.transform(dataset)\n",
     "            test_stdScale = scaler.transform(dataset)\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
-    "    return dataset_scaled\n",
+    "    return dataset_scaled,scaler\n",
     "\n",
     "def transform_rmse_to_seconds(scaler,y_test,y_hat_scaled):\n",
     "    try:\n",
-    "        y_hat_descaled = StandardScaler().inverse_transform(X=y_hat_scaled.reshape(-1,1))\n",
+    "        y_hat_descaled = scaler.inverse_transform(y_hat_scaled.reshape(-1,1))\n",
     "        rmse_descaled = mean_squared_error(y_pred=y_test,y_true=y_hat_descaled[:,0],squared=False)\n",
     "    except Exception as ex:\n",
     "        raise ex\n",
@@ -1344,7 +1364,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 147,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xtrain,xtest,ytrain,ytest = build_train_test(dataset=VIF_train_df,target_feature='actual_total_delivery_duration',test_size=0.2)\n",
+    "xtrain_sc = apply_standard_scaler(xtrain)[0]\n",
+    "xtest_sc = apply_standard_scaler(xtest)[0]\n",
+    "ytrain_sc,y_train_scaler = apply_standard_scaler(ytrain.values.reshape(-1,1))\n",
+    "ytest_sc,ytest_scaler = apply_standard_scaler(ytest.values.reshape(-1,1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -1354,23 +1387,30 @@
       "c:\\Users\\lukew\\anaconda3\\lib\\site-packages\\xgboost\\data.py:250: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
       "  elif isinstance(data.columns, (pd.Int64Index, pd.RangeIndex)):\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "trained_model,y_hat,train_error,test_error = applyMethod_make_regression(x_train=xtrain_sc,x_test=xtest_sc,y_test=ytest_sc,y_train=ytrain_sc,model=xgboost.XGBRegressor())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "1073.481"
+       "1061.5458"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "## let's try some basic regressions\n",
-    "\n",
-    "elasticLasso_model,lasso_yhat,lasso_train_error,lasso_test_error = applyMethod_make_regression(x_train=vif_x_train,y_train=vif_y_train,x_test=vif_x_test,y_test=vif_y_test,model=xgboost.XGBRegressor())\n",
-    "lasso_test_error"
+    "transform_rmse_to_seconds(scaler=ytest_scaler,y_test=ytest,y_hat_scaled=y_hat)[1]"
    ]
   }
  ],
